tests/lean/doSeqRightIssue.lean.expected.out
doSeqRightIssue.lean:5:23-5:24: error: unknown universe level 'v'
